--- a/hyperion/templates/admin/change_list.html
+++ b/hyperion/templates/admin/change_list.html
@@ -1,6 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_static admin_list %}
 {% load admin_urls %}
+{% load url from future %}
 
 {% block extrastyle %}
   {{ block.super }}
